--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,6 +2,13 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
+.center {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%; /* 可选：调整宽度 */
+}
+
 @import
   "minima/skins/{{ site.minima.skin | default: 'classic' }}",
   "minima/initialize";
