--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -2,11 +2,18 @@
 # Only the main Sass file needs front matter (the dashes are enough)
 ---
 
-.center {
+.center50 {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 50%; /* 可选：调整宽度 */
+}
+
+.center60 {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 60%; /* 可选：调整宽度 */
 }
 
 @import
